# partially-aggregatable-dmkg

./: Cargo.toml  README.md
benches/: dkg.rs  huge_dkg.rs
examples/: dmkg_bench.rs
report/: README.md  bench_sweep.csv  latency_sweep.csv  plot_graphs.py
report/bls/: README.md  bench_sweep_bls.csv  plot_bls.py
report/bls/data/: curve_tax.csv  sweep_bycurve.csv
report/data/: agg_layer_split.csv  gurkan_verify_breakdown.csv  malicious_long.csv  scaling_exponents.csv  sweep_latency.csv  sweep_latency_2.csv  sweep_malicious_n16.csv  sweep_malicious_n64.csv  sweep_n.csv  z_fraction_sweep.csv
src/: lib.rs
src/dkg/: aggregator.rs  complaint.rs  dmkg.rs  encryption.rs  errors.rs  mod.rs  mss.rs  neji.rs  network.rs  node.rs  pedersen.rs
src/sim/: mod.rs
ui/: server.rs
ui/web/: app.js  index.html  style.css
